# Interactive_Tapioca_GarbageCan

./: README.md  RTno_1023_0.ino
CreateTapioca/: CMakeLists.txt  CreateTapioca.conf  README.CreateTapioca  RTC.xml  _project.xml  _travis.yaml.CreateTapioca  rtc.conf
CreateTapioca/cmake/: createtapioca-config.cmake.in
CreateTapioca/doc/: conf.py.in
CreateTapioca/doc/content/: index.txt  index_j.txt
CreateTapioca/include/: CMakeLists.txt
CreateTapioca/include/CreateTapioca/: CMakeLists.txt  CreateTapioca.h
CreateTapioca/src/: CMakeLists.txt  CreateTapioca.cpp  CreateTapiocaComp.cpp  MultiBodySoftContact.cpp
CreateTapioca/test/include/CreateTapiocaTest/: CreateTapiocaTest.h
CreateTapioca/test/src/: CreateTapiocaTest.cpp  CreateTapiocaTestComp.cpp
Music/: .project  .travis.yaml.music  CMakeLists.txt  README.music  RTC.xml  desktop.ini  music.conf  rtc.conf
Music/cmake/: music-config.cmake.in
Music/doc/: conf.py.in
Music/doc/content/: index.txt  index_j.txt
Music/include/: CMakeLists.txt
Music/include/music/: CMakeLists.txt  music.h
Music/src/: CMakeLists.txt  music.cpp  musicComp.cpp
Music/test/include/musicTest/: musicTest.h
Music/test/src/: musicTest.cpp  musicTestComp.cpp
distance/: CMakeLists.txt  README.distance  RTC.xml  _project.xml  _travis.yaml.distance  distance.conf  rtc.conf
distance/cmake/: distance-config.cmake.in
distance/doc/: conf.py.in
distance/doc/content/: index.txt  index_j.txt
distance/include/: CMakeLists.txt
distance/include/distance/: CMakeLists.txt  distance.h
distance/src/: CMakeLists.txt  distance.cpp  distanceComp.cpp
distance/test/include/distanceTest/: distanceTest.h
distance/test/src/: distanceTest.cpp  distanceTestComp.cpp
